test/classes/deitz/class-numbered/class1-old.good
class1-old.chpl:6: error: illegal assignment of type to value
